[package]
name = "tiwenbin"
version = "0.1.0"
authors = ["doug <linderd@iinet.net.au>"]


[[bin]]
name = "base_language_demo"

[[bin]]
name = "ownership_demo"

[[bin]]
name = "mod_demo"

[[bin]]
name = "thread_demo"

[[bin]]
name = "tiwenbin"
path = "src/main.rs"

[[bin]]
name = "bin-test"
path = "src/binary/bin_test.rs"

[dependencies]
